--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ node_modules/
 # There are no dependencies, so we ignore package-lock
 package-lock.json
 
+# Claude settings
+.claude/
+
 # Scratch pad
 tmp/
 
