--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kixx-assert",
-  "version": "2.0.2",
-  "description": "Assert things in JavaScript",
+  "version": "2.1.0",
+  "description": "Make assertions in modern JavaScript code",
   "type": "module",
   "main": "mod.js",
   "engines": {
